# isoProject

./: CMakeLists.txt  imgui.ini  implementation_plan.md  init.c  isometric  logic.c  main.c
assets/shaders/: grassShader.fs
docs/: BIOME_SYSTEM_SPEC.md
include/: 3DvoxelGrid.hpp  biome.hpp  chunk.hpp  chunkManager.hpp  gamestate.hpp  grass.hpp  inventory.hpp  item.hpp  machineManager.hpp  machines.hpp  marchingCubes.hpp  resourceManager.hpp  textureAtlas.hpp  tileGrid.hpp  visualSettings.hpp  worldGenerator.hpp  worldMap.hpp
src/: 3DVoxelGrid.cpp  biome.cpp  chunk.cpp  chunkManager.cpp  gamestate.cpp  grass.cpp  inventory.cpp  item.cpp  machine.cpp  machineManager.cpp  main.cpp  marchingCubes.cpp  resourceManager.cpp  terrainShader.vs  textureAtlas.cpp  tileGrid.cpp  visualSettings.cpp  worldGenerator.cpp  worldMap.cpp
